2007-04-25  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/feedcomponent.py: 
	* flumotion/component/feedcomponent010.py: Get feed from
	flumotion.component.

	* flumotion/component/component.xml: Add feed.py to the bundle.

	* flumotion/worker/Makefile.am (flumotion_PYTHON): 
	* flumotion/component/Makefile.am (component_PYTHON): 
	* flumotion/component/feed.py: Moved from flumotion.worker.feed.
	Include the fdserver stuff so that everything can be bundled and
	old workers can enjoy new feed code.

	* flumotion/test/Makefile.am (EXTRA_DIST): 
	* flumotion/test/test_component_feed.py: Moved from
	test_worker_feed.py.

2007-04-25  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/admin/gtk/client.py
	  (Window._set_stop_start_component_sensitive):
	* flumotion/admin/gtk/parts.py (ComponentsView.update_start_stop_props,
	  ComponentMenu.__init__):
	Fix ability to stop lost components.
	Delete should only be possible on sleeping components.

2007-04-25  Andy Wingo  <wingo@pobox.com>

	* flumotion/worker/feed.py (FeedMedium.__init__): Make component
	an optional argument, only for back compatibility.
	(FeedMedium.requestFeed): New helper method, returns a deferred as
	the result of the whole operation: success with fds or error with
	a failure.
	(FeedMedium._doFeedTo): Adapt so that both the old eatFromFD and
	the new deferred interface are supported.

	* flumotion/test/test_worker_feed.py
	(TestFeedServer.testConnectAndFeed.feedReady)
	(TestFeedServer.testConnectAndFeedLegacy.feedReady): I fixed the
	FIXME, so I fix the comment.
	(TestFeedServer.testConnectAndFeed): New test for the new
	requestFeed interface.

	* flumotion/worker/feed.py (FeedMedium.startConnecting)
	(FeedMedium.stopConnecting): New helper functions. You can still
	connect using functions outside of the medium if that is your
	thing, which is the case with older feedcomponent.py bundles.
	(FeedMedium._doFeedTo): AUGMENT THE TERROR! (It is commented.)
